--- a/index.html
+++ b/index.html
@@ -1,12 +1,137 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Глейси</title>
-  </head>
-  <body>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>HTML Academy: Глейси</title>
+</head>
+<body>
+  <header class="main-header">
+    <nav class="main-navigation">
+      <a class="logo">
+        <img src="img/logo.svg" width="154" height="64" alt="Логотип Глейси">
+      </a>
+      <ul class="site-navigation">
+        <li class="navigation-item"><a href="#">Каталог</a>
+          <ul class="submenu">
+            <li><a href="#">Новинки</a></li>
+            <li><a href="catalog.html">Сливочное</a></li>
+            <li><a href="#">Щербеты</a></li>
+            <li><a href="#">Фруктовый лед</a></li>
+            <li><a href="#">Мелорин</a></li>
+          </ul>
+        </li>
+        <li class="navigation-item"><a href="#">Доставка и оплата</a></li>
+        <li class="navigation-item"><a href="#">О Компании</a></li>
+      </ul>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+      <ul class="user-navigation">
+        <li class="search-item">
+          <a class="search" href="#">
+            <span class="visually-hidden">Поиск по сайту</span>
+          </a>
+          <section class="modal modal-search">
+            <form class="search-form" action="https://echo.htmlacademy.ru" method="GET">
+              <input type="text" name="search" id="" placeholder="Что ищем?">
+            </form>
+          </section>
+        </li>
+        <li class="login-item">
+          <a class="login" href="#">
+            <span class="visually-hidden">Вход в учетную запись</span>
+          </a>
+          <section class="modal modal-login">
+            <form action="https://echo.htmlacademy.ru" method="POST">
+            <input type="text" name="email" placeholder="Электронная почта">
+            <input type="password" name="password" placeholder="Пароль">
+            <button class="button" type="submit">Войти</button>
+            <a class="modal-link" href="#">Забыли пароль?</a>
+            <a class="modal-link" href="#">Новая регистрация</a>
+            </form>
+          </section>
+        </li>
+        <li class="basket-item">
+          <a class="basket" href="#">Пусто
+            <span class="visually-hidden">Корзина с товарами</span>
+          </a>
+        </li>
+      </ul>
+    </nav>
+    <div class="schedule-info">
+      <p>С 10 до 20, ежедневно
+        8 812 450-25-25
+      </p>
+    </div>
+  </header>
 
-  </body>
+  <main class="main-content">
+    <h1 class="visually-hidden">Глейси - магазин по продаже мороженого</h1>
+    <section class="slider">
+      <div class="controls">
+          <label><input type="radio" id="slide-1" name="slider" checked></label>
+          <label><input type="radio" id="slide-2" name="slider"></label>
+          <label><input type="radio" id="slide-3" name="slider"></label>
+      </div>
+
+      <div class="slide slide1" id="slide-1">
+        <p>Крем-брюле и пломбир с малиновым джемом</p>
+        <a class="button" href="#">Давайте оба!</a>
+      </div>
+      <div class="slide slide2" id="slide-2">
+        <p>Шоколадный пломбир и лимонный сорбет</p>
+        <a class="button" href="#">Давайте оба!</a>
+      </div>
+      <div class="slide slide3" id="slide-3">
+        <p>Пломбир с помадкой и клубничный щербет</p>
+        <a class="button" href="#">Давайте оба!</a>
+      </div>
+    </section>
+
+    <section class="specials">
+        <h2 class="visually-hidden">Специальные предложения</h2>
+      <div class="special-banner">
+        <b>Малинка даром!</b>
+        <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
+        <a href="catalog.html">Хочу варенье!</a>
+      </div>
+      <div class="special-banner">
+        <b>Шоколадки даром!</b>
+        <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
+        <a href="catalog.html">Хочу варенье!</a>
+      </div>
+    </section>
+
+    <section class="bestseller">
+      <h2 class="visually-hidden">Популярные товары</h2>
+      <ul class="bestseller-list">
+        <li class="item-card">
+          <img src="" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+          <p>310₽ <span>/кг</span></p>
+          <p>Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
+          <a class="button" href="#">Быстрый просмотр</a>
+        </li>
+        <li class="item-card">
+          <img src="" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
+          <p>380₽ <span>/кг</span></p>
+          <p>Сливочно-кофейное с кусочками шоколада</p>
+          <a class="button" href="#">Быстрый просмотр</a>
+        </li>
+        <li class="item-card">
+          <img src="" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+          <p>355₽ <span>/кг</span></p>
+          <p>Сливочно-клубничное с присыпкой из белого шоколада</p>
+          <a class="button" href="#">Быстрый просмотр</a>
+        </li>
+        <li class="item-card">
+          <img src="" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
+          <p>310₽ <span>/кг</span></p>
+          <p>Сливочное крем-брюле с карамельной подливкой</p>
+          <a class="button" href="#">Быстрый просмотр</a>
+        </li>
+      </ul>
+    </section>
+  </main>
+
+</body>
 </html>
