--- a/index.html
+++ b/index.html
@@ -6,132 +6,212 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>HTML Academy: Глейси</title>
 </head>
+
 <body>
-  <header class="main-header">
-    <nav class="main-navigation">
-      <a class="logo">
-        <img src="img/logo.svg" width="154" height="64" alt="Логотип Глейси">
-      </a>
-      <ul class="site-navigation">
-        <li class="navigation-item"><a href="#">Каталог</a>
-          <ul class="submenu">
-            <li><a href="#">Новинки</a></li>
-            <li><a href="catalog.html">Сливочное</a></li>
-            <li><a href="#">Щербеты</a></li>
-            <li><a href="#">Фруктовый лед</a></li>
-            <li><a href="#">Мелорин</a></li>
-          </ul>
-        </li>
-        <li class="navigation-item"><a href="#">Доставка и оплата</a></li>
-        <li class="navigation-item"><a href="#">О Компании</a></li>
-      </ul>
+  <div class="wrapper">
+    <header class="header">
+      <nav class="main-navigation">
+        <a class="logo">
+          <img src="img/logo.svg" width="154" height="64" alt="Логотип Глейси">
+        </a>
+        <ul class="site-navigation">
+          <li class="navigation-item">
+            <a href="#">Каталог</a>
+            <ul class="submenu">
+              <li><a href="#">Новинки</a></li>
+              <li><a href="catalog.html">Сливочное</a></li>
+              <li><a href="#">Щербеты</a></li>
+              <li><a href="#">Фруктовый лед</a></li>
+              <li><a href="#">Мелорин</a></li>
+            </ul>
+          </li>
+          <li class="navigation-item"><a href="#">Доставка и оплата</a></li>
+          <li class="navigation-item"><a href="#">О Компании</a></li>
+        </ul>
 
-      <ul class="user-navigation">
-        <li class="search-item">
-          <a class="search" href="#">
-            <span class="visually-hidden">Поиск по сайту</span>
+        <ul class="user-navigation">
+          <li class="search-item">
+            <a class="search" href="#">
+              <span class="visually-hidden">Поиск по сайту</span>
+            </a>
+            <section class="modal modal-search">
+              <form class="search-form" action="https://echo.htmlacademy.ru" method="GET">
+                <label class="visually-hidden" for="search-field">Поиск, введите запрос</label>
+                <input type="text" name="search" id="search-field" placeholder="Что ищем?">
+              </form>
+            </section>
+          </li>
+          <li class="login-item">
+            <a class="login" href="#">
+              <span class="visually-hidden">Вход в учетную запись</span>
+            </a>
+            <section class="modal modal-login">
+              <form class="login-form" action="https://echo.htmlacademy.ru" method="POST">
+                <label class="visually-hidden" for="email-field">Введите адрес электронной почты</label>
+                <input type="text" name="email" id="email-field" placeholder="Электронная почта" required>
+                <label class="visually-hidden" for="password-field">Введите пароль</label>
+                <input type="password" name="password" id="password-field" placeholder="Пароль" required>
+                <button class="button" type="submit">Войти</button>
+                <a class="modal-link" href="#">Забыли пароль?</a>
+                <a class="modal-link" href="#">Новая регистрация</a>
+              </form>
+            </section>
+          </li>
+          <li class="basket-item">
+            <a class="basket" href="#">Пусто
+              <span class="visually-hidden">Корзина с товарами</span>
+            </a>
+          </li>
+        </ul>
+      </nav>
+      <div class="schedule-info">
+        <p>С 10 до 20, ежедневно
+          8 812 450-25-25
+        </p>
+      </div>
+    </header>
+
+    <main class="main-content">
+      <h1 class="visually-hidden">Глейси - магазин по продаже мороженого</h1>
+      <section class="slider">
+        <div class="controls">
+            <label><input type="radio" id="slide-1" name="slider" checked></label>
+            <label><input type="radio" id="slide-2" name="slider"></label>
+            <label><input type="radio" id="slide-3" name="slider"></label>
+        </div>
+
+        <div class="slide slide1" id="slide-1">
+          <p>Крем-брюле и пломбир с малиновым джемом</p>
+          <a class="button" href="#">Давайте оба!</a>
+        </div>
+        <div class="slide slide2" id="slide-2">
+          <p>Шоколадный пломбир и лимонный сорбет</p>
+          <a class="button" href="#">Давайте оба!</a>
+        </div>
+        <div class="slide slide3" id="slide-3">
+          <p>Пломбир с помадкой и клубничный щербет</p>
+          <a class="button" href="#">Давайте оба!</a>
+        </div>
+      </section>
+
+      <section class="specials">
+          <h2 class="visually-hidden">Специальные предложения</h2>
+        <div class="special-banner left">
+          <b>Малинка даром!</b>
+          <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
+          <a href="catalog.html">Хочу варенье!</a>
+        </div>
+        <div class="special-banner right">
+          <b>Шоколадки даром!</b>
+          <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
+          <a href="catalog.html">Хочу варенье!</a>
+        </div>
+      </section>
+
+      <section class="bestseller">
+        <h2 class="visually-hidden">Популярные товары</h2>
+        <ul class="bestseller-list">
+          <li class="item-card">
+            <img src="" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+            <p>310₽ <span>/кг</span></p>
+            <p>Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
+            <a class="button" href="#">Быстрый просмотр</a>
+          </li>
+          <li class="item-card">
+            <img src="" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
+            <p>380₽ <span>/кг</span></p>
+            <p>Сливочно-кофейное с кусочками шоколада</p>
+            <a class="button" href="#">Быстрый просмотр</a>
+          </li>
+          <li class="item-card">
+            <img src="" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+            <p>355₽ <span>/кг</span></p>
+            <p>Сливочно-клубничное с присыпкой из белого шоколада</p>
+            <a class="button" href="#">Быстрый просмотр</a>
+          </li>
+          <li class="item-card">
+            <img src="" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
+            <p>310₽ <span>/кг</span></p>
+            <p>Сливочное крем-брюле с карамельной подливкой</p>
+            <a class="button" href="#">Быстрый просмотр</a>
+          </li>
+        </ul>
+      </section>
+
+      <section class="about">
+        <h2 class="visually-hidden">О нас</h2>
+        <b>Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</b>
+        <p>Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
+        <p>Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</p>
+        <p>Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
+        <p>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
+      </section>
+
+      <div class="news">
+        <article class="new">
+          <p>Новое в нашем блоге</p>
+          <h1>10 способов сервировки фруктовых щербетов к столу</h1>
+        </article>
+
+        <section class="subscribe">
+          <h2 class="visually-hidden">Подписаться на новости</h2>
+          <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
+          <form action="https://echo.htmlacademy.ru" method="POST">
+            <label class="visually-hidden" for="subscribe-email-field">Введите адрес электронной почты</label>
+            <input type="email" name="email" id="subscribe-email-field" placeholder="Электронная почта">
+            <button class="button" type="submit">Отправить</button>
+          </form>
+        </section>
+      </div>
+
+      <section class="contacts">
+        <img src="" width="1200" height="430" alt="ул. Большая Конюшенная 19/8, Санкт-Петербург">
+        <div class="contacts-info">
+          <p>Адрес главного офиса и офлайн-магазина: <span>ул. Большая Конюшенная 19/8, Санкт-Петербург</span></p>
+          <p>Для заказов по телефону: <span>8 812 450-25-25</span> (с 10 до 20 ежедневно)</p>
+          <a class="button" href="#">Форма обратной связи</a>
+        </div>
+        <div class="modal modal-feedback">
+          <p>Мы обязательно вам ответим!</p>
+          <label class="visually-hidden" for="name-field">Ваше имя</label>
+          <input type="text" name="name" id="name-field" placeholder="Как вас зовут?">
+
+          <label class="visually-hidden" for="feedback-email-field">Ваш адрес электронной почты</label>
+          <input type="text" name="feedback-email" id="feedback-email-field" placeholder="Ваша почта для ответа?">
+
+          <label class="visually-hidden" for="comment-field">Оставьте комментарий</label>
+          <textarea name="comment" id="comment-field" cols="10" rows="10" placeholder="Напишите что-нибудь..."></textarea>
+          <button class="button" type="submit">Отправить</button>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <div class="footer-column">
+        <ul class="socials">
+          <li><a class="social social-twitter" href="#"><span class="visually-hidden">Твиттер</span></a></li>
+          <li><a class="social social-instagram" href="#"><span class="visually-hidden">Инстаграм</span></a></li>
+          <li><a class="social social-facebook" href="#"><span class="visually-hidden">Фейсбук</span></a></li>
+          <li><a class="social social-vkontakte" href="#"><span class="visually-hidden">Вконтакте</span></a></li>
+        </ul>
+      </div>
+      <div class="footer-column-center">
+        <ul class="useful-info">
+          <li class="mark">Для поставщиков</li>
+          <li>О производстве</li>
+          <li>Наши документы</li>
+          <li>Экологические стандарты</li>
+        </ul>
+      </div>
+      <div class="footer-column">
+        <div class="copyright">
+          <a href="https://htmlacademy.ru/intensive/htmlcss">
+          svg
           </a>
-          <section class="modal modal-search">
-            <form class="search-form" action="https://echo.htmlacademy.ru" method="GET">
-              <input type="text" name="search" id="" placeholder="Что ищем?">
-            </form>
-          </section>
-        </li>
-        <li class="login-item">
-          <a class="login" href="#">
-            <span class="visually-hidden">Вход в учетную запись</span>
-          </a>
-          <section class="modal modal-login">
-            <form action="https://echo.htmlacademy.ru" method="POST">
-            <input type="text" name="email" placeholder="Электронная почта">
-            <input type="password" name="password" placeholder="Пароль">
-            <button class="button" type="submit">Войти</button>
-            <a class="modal-link" href="#">Забыли пароль?</a>
-            <a class="modal-link" href="#">Новая регистрация</a>
-            </form>
-          </section>
-        </li>
-        <li class="basket-item">
-          <a class="basket" href="#">Пусто
-            <span class="visually-hidden">Корзина с товарами</span>
-          </a>
-        </li>
-      </ul>
-    </nav>
-    <div class="schedule-info">
-      <p>С 10 до 20, ежедневно
-        8 812 450-25-25
-      </p>
-    </div>
-  </header>
-
-  <main class="main-content">
-    <h1 class="visually-hidden">Глейси - магазин по продаже мороженого</h1>
-    <section class="slider">
-      <div class="controls">
-          <label><input type="radio" id="slide-1" name="slider" checked></label>
-          <label><input type="radio" id="slide-2" name="slider"></label>
-          <label><input type="radio" id="slide-3" name="slider"></label>
+          <span>Сделано в <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a> © 2018</span>
+        </div>
       </div>
-
-      <div class="slide slide1" id="slide-1">
-        <p>Крем-брюле и пломбир с малиновым джемом</p>
-        <a class="button" href="#">Давайте оба!</a>
-      </div>
-      <div class="slide slide2" id="slide-2">
-        <p>Шоколадный пломбир и лимонный сорбет</p>
-        <a class="button" href="#">Давайте оба!</a>
-      </div>
-      <div class="slide slide3" id="slide-3">
-        <p>Пломбир с помадкой и клубничный щербет</p>
-        <a class="button" href="#">Давайте оба!</a>
-      </div>
-    </section>
-
-    <section class="specials">
-        <h2 class="visually-hidden">Специальные предложения</h2>
-      <div class="special-banner">
-        <b>Малинка даром!</b>
-        <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
-        <a href="catalog.html">Хочу варенье!</a>
-      </div>
-      <div class="special-banner">
-        <b>Шоколадки даром!</b>
-        <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
-        <a href="catalog.html">Хочу варенье!</a>
-      </div>
-    </section>
-
-    <section class="bestseller">
-      <h2 class="visually-hidden">Популярные товары</h2>
-      <ul class="bestseller-list">
-        <li class="item-card">
-          <img src="" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
-          <p>310₽ <span>/кг</span></p>
-          <p>Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
-          <a class="button" href="#">Быстрый просмотр</a>
-        </li>
-        <li class="item-card">
-          <img src="" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
-          <p>380₽ <span>/кг</span></p>
-          <p>Сливочно-кофейное с кусочками шоколада</p>
-          <a class="button" href="#">Быстрый просмотр</a>
-        </li>
-        <li class="item-card">
-          <img src="" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
-          <p>355₽ <span>/кг</span></p>
-          <p>Сливочно-клубничное с присыпкой из белого шоколада</p>
-          <a class="button" href="#">Быстрый просмотр</a>
-        </li>
-        <li class="item-card">
-          <img src="" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
-          <p>310₽ <span>/кг</span></p>
-          <p>Сливочное крем-брюле с карамельной подливкой</p>
-          <a class="button" href="#">Быстрый просмотр</a>
-        </li>
-      </ul>
-    </section>
-  </main>
-
+    </footer>
+  </div>
 </body>
 </html>
